Fixed a lot of bugs with banning, unbanning, kicking, the joining on servers and also made the role selection fully functional
